tests/NormalTests/paczka2/big_fuzzy/91505419.err
Error in line 25: eP9vpEL774T ;703 50,5
Error in line 21: UnI S942 10,9
Error in line 28: UnI A703 -2,7
Error in line 17: S977 A703 33,6
Error in line 29: p4m S221 16,9
Error in line 20: txZ A703 24,2
Error in line 37: p4m S977 69,8
Error in line 27: UnI A703 43,9
Error in line 16: eP9vpEL774T A703 21,5
Error in line 51: UnI S221 32,0
Error in line 57: UnI A703 42,5
Error in line 55: z9r0FmFFvc6 A703 0,5
Error in line 66: UnI S977 8,4
Error in line 74: YjZDgQ S221 86,4
Error in line 80: S977 A703 0,1
Error in line 82: eP9vpEL774T S977 20,9
Error in line 86: txZ S942 93,9
Error in line 94: eP9vpEL774T A703 35,0
Error in line 120: YjZDgQ A703 335,0
Error in line 135: YjZDgQ S977 100,0
Error in line 140: eP9vpEL774T S977 76,9
Error in line 144: UnI S942 34,7
Error in line 152: z9r0FmFFvc6 S977 63,7
Error in line 157: p4m S942 18,2
Error in line 153: txZ S221 67,4
Error in line 176: S977 A703 51,9
Error in line 191: S977 A703 84,6
Error in line 214: UnI S942 64,4
Error in line 215: eP9vpEL774T S221 95,5
Error in line 202: txZ S977 0,9
Error in line 219: YjZDgQ S221 14,9
Error in line 220: txZ S942 3,8
Error in line 233: p4m S221 81,6
Error in line 245: z9r0FmFFvc6 A703 70,2
